Retire legacy decoders and alias actions